QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- Fixed Makefile.in handling of installation directories to
  the configure script eg. --datadir, --localedir, --mandir.
  (after an original patch from h3xx, thanks).

- Main window is now brought to front and (re)activated when
  clicking on the system tray icon instead of just hiding it.

- Add current xrun count to the system tray icon tooltip, if
  not zero (after patch #3314633 by Colin Fletcher, thanks).


0.3.8  2011-07-01  JACK Session versioning.

- Debugging stacktrace now applies to all working threads.

- Session "Save" button now a drop-down menu, replacing the
  session save type combo-box/drop-down list selection. Also,
  an early session directory versioning/numbering scheme is
  now in place, although optional.

- Probable fix to debian bug report #624198 - segfault when
  pressing the stop button (by Grant Adrian Diffey, after a
  patch from Adrian Knoth, thanks).

- Desktop environment session shutdown (eg. logout) is now
  tapped for graceful application exit, even though the main
  window is active (visible) and minimizing to system tray
  is enabled. Both were causing first shutdown/logout attempt
  to abort. Not anymore, hopefully ;).

- Make sure all activated patchbay definition files are in
  their complete and absolute directory path forms.

- Connections refresh button now does an immediate and true
  reconstruction of all clients and their respective ports
  and connections, unconditionally.

- Command line server start option (-s, --start) is now made
  independent from configuration setup option (cf. Setup/Misc
  /Start JACK audio server on application startup).

- Now handling cable socket types properly to let patchbay
  definitions work correctly, whenever having sockets with
  the very same literal name (twisted from patch #3183467,
  by Karsten, thanks;).
